syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package nanoproto;

service Nano {
  rpc BlocksInfo (BlocksInfoRequest) returns (BlocksInfoReply) {}
}

message BlocksInfoRequest {
  repeated string hashes = 1;
}

message Block {
  string block_account =1;
  string amount = 2;
  string balance = 3;
  string height = 4;
  string local_timestamp = 5;
  string confirmed = 6;
  BlockContents contents = 7;
}

message BlockContents {
  string type = 1;
  string account = 2;
  string previous = 3;
  string representative = 4;
  string balance = 5;
  string link = 6;
  string link_as_account = 7;
  string signature = 8;
  string work = 9;
  string subtype = 10;
}

message BlocksInfoReply {
  map<string, Block> blocks = 1;
}

message ElectionInfo {
  string duration = 1;
  string time = 2;
  string tally = 3;
  string request_count = 4;
}

message SubscriptionMessage {
  string account = 1;
  string signature = 2;
  string sequence = 3;
  repeated string blocks = 4;
  string amount = 5;
  string hash = 6;
  string confirmation_type = 7;
  ElectionInfo election_info = 8;
  SubscriptionBlock block = 9;
}

message SubscriptionBlock {
  string type = 1;
  string source = 2;
  string representative = 3;
  string account = 4;
  string work = 5;
  string signature = 6;
  string previous = 7;
  string link_as_account = 8;
  string subtype = 9;
  string link = 10;
  string balance = 11;
  string destination = 12;
}

//message SubscriptionBlock {
//  string block_account =1;
//  string amount = 2;
//  string balance = 3;
//  string height = 4;
//  string local_timestamp = 5;
//  string confirmed = 6;
//  BlockContents contents = 7;
//  string subtype = 8;
//}

message SubscriptionEntry {
  string topic = 1;
  string time = 2;
  SubscriptionMessage message = 3;
}
